--- a/quicknotes/src/App.css
+++ b/quicknotes/src/App.css
@@ -60,3 +60,21 @@ button {
   display: "block";
   margin: "10px auto";
 }
+
+.custom-modal-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.custom-modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  width: 15%;
+  background-color: white;
+  border-radius: 8px;
+  outline: none;
+}
